templates/butlerci_template.yaml
---
# Source: butlerci/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: release-name-butlerci
  labels:
    helm.sh/chart: butlerci-0.1.0
    app.kubernetes.io/name: butlerci
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "0.1.0"
    app.kubernetes.io/managed-by: Helm
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: butlerci
    app.kubernetes.io/instance: release-name
---
# Source: butlerci/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: release-name-butlerci
  labels:
    helm.sh/chart: butlerci-0.1.0
    app.kubernetes.io/name: butlerci
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "0.1.0"
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: butlerci
      app.kubernetes.io/instance: release-name
  template:
    metadata:
      labels:
        app.kubernetes.io/name: butlerci
        app.kubernetes.io/instance: release-name
    spec:
      serviceAccountName: release-name-butlerci
      securityContext:
        {}
      containers:
        - name: butlerci
          securityContext:
            readOnlyRootFilesystem: true
            runAsNonRoot: true
            runAsUser: 1000
          image: "etejeda/butlerci:0.1.0"
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          volumeMounts:
            - mountPath: /app/config.yaml
              name: config-volume
              subPath: config.yml
              readOnly: true
          livenessProbe:
            httpGet:
              path: /healthz
              port: http
            initialDelaySeconds: 15
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /healthz
              port: http
            initialDelaySeconds: 15
            periodSeconds: 10
          resources:
            limits:
              cpu: 50m
              memory: 128Mi
            requests:
              cpu: 25m
              memory: 64Mi
      volumes:
        - name: config-volume
          configMap:
            name: release-name-butlerci-config
---
# Source: butlerci/templates/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: release-name-butlerci
  labels:
    helm.sh/chart: butlerci-0.1.0
    app.kubernetes.io/name: butlerci
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "0.1.0"
    app.kubernetes.io/managed-by: Helm
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: "butlerci.enriquetejeda.com"
      http:
        paths:
          - path: /
            backend:
              serviceName: release-name-butlerci
              servicePort: 80
---
# Source: butlerci/templates/tests/test-connection.yaml
apiVersion: v1
kind: Pod
metadata:
  name: "release-name-butlerci-test-connection"
  labels:
    helm.sh/chart: butlerci-0.1.0
    app.kubernetes.io/name: butlerci
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "0.1.0"
    app.kubernetes.io/managed-by: Helm
  annotations:
    "helm.sh/hook": test-success
spec:
  containers:
    - name: wget
      image: busybox
      command: ['wget']
      args: ['release-name-butlerci:80']
  restartPolicy: Never
